# nowkast

./: LICENSE  README.md  pyproject.toml
examples/simple_rank/: app.py
examples/web3/rank/: app.py
nowkast/: __init__.py  pyro_wip.py  shiny_module.py
nowkast/shiny/: __init__.py  __main__.py
src/python/nowkast/: __init__.py  point.py  shiny_module.py
test/: test-001.py
tests/: NOTES.md  test-001.py
