[tool.poetry]
name = "nowkast"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
sqlmodel = "^0.0.12"
pytest = "^7.4.3"
shiny = "^0.6.0"
pytest-asyncio = "^0.21.1"
aiosqlite = "^0.19.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
